--- a/api/package.json
+++ b/api/package.json
@@ -21,9 +21,11 @@
     "morgan": "^1.10.0",
     "node-fetch": "^3.0.0",
     "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-local-sequelize": "^0.9.0",
     "pg": "^8.7.1",
+    "router": "^1.3.5",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
