--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "daisyui": "^1.14.0",
     "next": "latest",
     "next-redux-wrapper": "^7.0.5",
