--- a/api/package.json
+++ b/api/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-sesssion": "^1.15.5",
+    "googleapis": "^87.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node-fetch": "^3.0.0",
+    "nodemailer": "^6.6.5",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
