--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-sesssion": "^1.15.5",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.5.8",
     "morgan": "^1.10.0",
     "node-fetch": "^3.0.0",
     "passport": "^0.4.1",
@@ -26,6 +27,7 @@
     "passport-local": "^1.0.0",
     "passport-local-sequelize": "^0.9.0",
     "pg": "^8.7.1",
+    "request": "^2.88.2",
     "router": "^1.3.5",
     "sequelize": "^6.6.5"
   },
