--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "",
+  "description": "dependencias necesarias para levantar el backend",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,15 +10,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.27.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-sesssion": "^1.15.5",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.5.8",
     "morgan": "^1.10.0",
     "node-fetch": "^3.0.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-local-sequelize": "^0.9.0",
     "pg": "^8.7.1",
+    "request": "^2.88.2",
+    "router": "^1.3.5",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
